--- a/02-tic-tac-toe-starting-project/package.json
+++ b/02-tic-tac-toe-starting-project/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-essentials-deep-dive-adv",
+  "homepage": "https://avvienash.github.io/React-The-Complete-Guide-2025-Projects/02-tic-tac-toe-starting-project/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist -r https://github.com/Avvienash/React-The-Complete-Guide-2025-Projects.git --dest 02-tic-tac-toe-starting-project"
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -21,6 +24,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.3.0",
     "vite": "^6.3.5"
   }
 }
