--- a/03-investment-calculator/package.json
+++ b/03-investment-calculator/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist -r https://github.com/Avvienash/React-The-Complete-Guide-2025-Projects.git --dest 03-investment-calculator"
+
   },
   "dependencies": {
     "react": "^19.0.0",
