--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "homepage",
+  "homepage": "https://avvienash.github.io/React-The-Complete-Guide-2025-Projects/",
   "private": true,
   "version": "1.0.0",
   "scripts": {
