--- a/04-sign-in-page/package.json
+++ b/04-sign-in-page/package.json
@@ -3,11 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://avvienash.github.io/React-The-Complete-Guide-2025-Projects/04-sign-in-page/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist -r https://github.com/Avvienash/React-The-Complete-Guide-2025-Projects.git --dest 04-sign-in-page"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
@@ -24,6 +27,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "gh-pages": "^6.3.0",
     "vite": "^7.1.1"
   }
 }
